
- Issue #14026: In test_cmd_line_script, check that sys.argv is populated
  correctly for the various invocation approaches (Patch by Jason Yeo)

- Issue #14032: Fix incorrect variable name in test_cmd_line_script debugging
  message (Patch by Jason Yeo)

- Issue #14589: Update certificate chain for sha256.tbs-internet.com, fixing
  a test failure in test_ssl.

Build
-----

- Issue #15645: Ensure 2to3 grammar pickles are properly installed.

- Issue #15560: Fix building _sqlite3 extension on OS X with an SDK.

- Issue #8847: Disable COMDAT folding in Windows PGO builds.

- Issue #14197: For OS X framework builds, ensure links to the shared
  library are created with the proper ABI suffix.

- Issue #14472: Update .gitignore. Patch by Matej Cepl.

- The Windows build now uses OpenSSL 1.0.0j and bzip2 1.0.6.

- Issue #14557: Fix extensions build on HP-UX. Patch by Adi Roiban.

- Issue #14437: Fix building the _io module under Cygwin.

- Issue #14387: Do not include accu.h from Python.h.

- Issue #14359: Only use O_CLOEXEC in _posixmodule.c if it is defined.
  Based on patch from Hervé Coatanhay.

- Issue #14018: Fix OS X Tcl/Tk framework checking when using OS X SDKs.

Documentation
-------------

- Issue #11964: Document a change in v3.2 to the behavior of the indent
  parameter of json encoding operations.

- Issue #14674: Add a discussion of the json module's standard compliance.
  Patch by Chris Rebert.

- Issue #15630: Add an example for "continue" stmt in the tutorial. Patch by
  Daniel Ellis.

- Issue #15444: Use proper spelling for non-ASCII contributor names.  Patch
  by Serhiy Storchaka.

- Issue 15482: Properly document the default 'level' value for __import__()
  while warning about using negative values.

- Issue #15230: Clearly document some of the limitations of the runpy
  module and nudge readers towards importlib when appropriate.

- Issue #13557: Clarify effect of giving two different namespaces to exec or
  execfile().
